data.sql + application.properties config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,7 @@ spring.datasource.username=N8Ilk2pIr1
 spring.datasource.password=S7OtcibDzA
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.datasource.initialization-mode=always
+spring.datasource.data= classpath:/data.sql
+
 spring.jpa.hibernate.ddl-auto=create
