--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.initialization-mode=always
 spring.datasource.data= classpath:/data.sql
 
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
